--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> JS Flappy Bird </title>
+    <title>Flappy Bird using JS</title>
+    <link href="assets/bird.png"></link>
   </head>
-
   <body>
-    <h2> Flappy Bird game using Javascript </h2>
+   <h2>Flappy Bird using Javascript</h2>
 
-    <canvas id="canvas" width="288" height="512"></canvas>
+   <canvas id="canvas" width="288" height="512"></canvas>
 
-    <script type="text/javascript" src="flappyBird.js"></script>
+   <script src="flappyBird.js"></script>
   </body>
 </html>
